Fix border-box width squashing image in Firefox

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -70,12 +70,11 @@ section.contact {
 }
 
 section > * {
-    box-sizing: border-box;
-    width: 100%;
+    max-width: 100%;
     padding: 2.5vmax;
 
     @media all and (min-width: 750px) {
-        max-width: 50%;
+        max-width: calc(50% - 5vmax);
     }
 }
 
